--- a/client/src/components/index.module.css
+++ b/client/src/components/index.module.css
@@ -62,3 +62,33 @@
   border-radius: 50%; /* 円形の形状 */
   pointer-events: none; /* クリックイベントを無効化 */
 }
+
+.nk_koma{
+	font-style:normal;
+	position:relative;
+}
+.nk_koma:after{
+	content:"☖";
+	font-size:230%;
+	position:absolute;
+	left:-0.3em;
+	top:-0.4em;
+}
+
+.nk_koma_r{
+	font-style:normal;
+	position:relative;
+	display:inline-block;
+	transform: rotate(180deg);
+	-ms-transform: rotate(180deg);
+	-moz-transform: rotate(180deg);
+	-webkit-transform: rotate(180deg);
+	-o-transform: rotate(180deg);
+  }
+.nk_koma_r:after{
+	content:"☖";
+	font-size:160%;
+	position:absolute;
+	left:-0.2em;
+	top:-0.3em;
+}
