--- a/client/src/pages/index.module.css
+++ b/client/src/pages/index.module.css
@@ -20,3 +20,120 @@
   align-items: center;
   font-size: 20px; /* 文字サイズを調整 */
 }
+
+.ribbon13-wrapper {  
+  display: block;
+  position: relative;
+  margin: 15px auto;
+  padding: 10px 0;
+  width: 300px;
+  background: #f1f1f1;
+  }
+
+.ribbon13 {
+  display: inline-block;
+  position: relative;
+  box-sizing: border-box;
+  padding: 5px 0;
+  margin: 0 0 0 -20px;
+  width: calc(100% + 20px);
+  color: white;
+  background: #70a6ff;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+}
+
+.ribbon13 h3{
+  margin: 0;
+  padding: 0 30px 0 15px;
+  border-top: dashed 1px #FFF;
+  border-bottom: dashed 1px #FFF;
+  font-size: 20px;
+  line-height: 46px;
+}
+
+.ribbon13:after {
+  position: absolute;
+  content: '';
+  z-index: 1;
+  top: 0;
+  right: 0;
+  width: 0px;
+  height: 0px;
+  border-width: 30px 15px 30px 0px;
+  border-color: transparent #f1f1f1 transparent transparent;
+  border-style: solid;
+}
+
+.ribbon13:before {
+  position: absolute;
+  content: '';
+  top: 100%;
+  left: 0;
+  border: none;
+  border-bottom: solid 15px transparent;
+  border-right: solid 20px #6081b7;
+}
+
+
+.ribbon10 {
+  display: inline-block;
+  position: relative;
+  height: 45px;
+  text-align: center;
+  box-sizing: border-box;
+}
+
+.ribbon10:before {
+  content: '';
+  position: absolute;
+  width: 10px;
+  bottom: -10px;
+  left: -35px;
+  z-index: -2;
+  border: 20px solid #a5cff3;
+  border-left-color: transparent;
+}
+
+.ribbon10:after {
+  content: '';
+  position: absolute;
+  width: 10px;
+  bottom: -10px;
+  right: -35px;
+  z-index: -2;
+  border: 20px solid #a5cff3;
+  border-right-color: transparent;
+}
+
+.ribbon10 h3 {
+  display: inline-block;
+  position: relative;
+  margin: 0;
+  padding: 0 20px;
+  line-height: 45px;
+  font-size: 18px;
+  color: #008eff;
+  text-shadow: 0 0 2px #FFF;
+  background: -webkit-repeating-linear-gradient(-45deg, #b0daff, #b0daff 3px,#cfe8ff 3px, #cfe8ff 7px);
+  background: repeating-linear-gradient(-45deg, #b0daff, #b0daff 3px,#cfe8ff 3px, #cfe8ff 7px);
+}
+
+.ribbon10 h3:before {
+  position: absolute;
+  content: '';
+  top: 100%;
+  left: 0;
+  border: none;
+  border-bottom: solid 10px transparent;
+  border-right: solid 15px #7fafd9;
+}
+
+.ribbon10 h3:after {
+  position: absolute;
+  content: '';
+  top: 100%;
+  right: 0;
+  border: none;
+  border-bottom: solid 10px transparent;
+  border-left: solid 15px #7fafd9;
+}
